Starting new design
Rearranged files and set up the basics for the new design. We’ll see if
I could make this work.

--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,1 @@
-#book {
-  margin-top: 20px;
-}
-
-input {
-  margin-bottom: 20px;
-}
-
-.ingredientsInput {
-  width: 90%;
-}
-
-.deleteButton {
-  float: right;
-}
-
-p {
-    margin-top: 40px;
-    color: #aaa;
-}
+*{margin:0;padding:0;border:0}html body{height:100%}body{-moz-box-shadow:inset 0 0 140px #444;-webkit-box-shadow:inset 0 0 140px #444;box-shadow:inset 0 0 140px #444;background:#e8c4b9}#book{margin-top:20px}input{margin-bottom:20px}.ingredientsInput{width:90%}.deleteButton{float:right}p,h1{padding:20px}
