--- a/index.jade
+++ b/index.jade
@@ -1,1 +1,15 @@
-#book
+//output:index.html
+
+head
+  title Recipe Book
+  link(rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
+  link(rel="stylesheet" href="css/style.css")
+body
+    h1.text-center Recipe Book
+    #book
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js')
+    script(src="js/babel/index.js")
+    p.text-center Note: your recipes are automatically saved in your browser memory.
