--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,11 +1,117 @@
+//compileCompressed: ../css/style.css
+
+$bodyTop: #fff
+$bodyBot: rgb(236, 248, 242)
+$titleColor: rgb(107, 141, 149)
+$mainTitleColor: rgb(197, 217, 234)
+$buttonBackground: rgb(79, 170, 231)
+
+html
+  height: 100%
+
+body
+  height: 100%
+  margin: 0
+  background: $bodyBot
+  background: -webkit-linear-gradient($bodyTop, $bodyBot)
+  background: -o-linear-gradient($bodyTop, $bodyBot)
+  background: -moz-linear-gradient($bodyTop, $bodyBot)
+  background: linear-gradient($bodyTop, $bodyBot)
+  background-repeat: no-repeat
+  background-attachment: fixed
+
 #book
   margin-top: 20px
-  
+
 input
-  margin-bottom: 20px
-  
+  margin-bottom: 200px
+
+.note
+  margin: 50px
+  color: #999
+
+.mainTitle
+  color: $mainTitleColor
+  margin: 60px
+
 .ingredientsInput
   width: 90%
-  
+
 .deleteButton
   float: right
+
+
+//headers
+
+.panel-heading
+  background: #fff !important
+  color: $titleColor !important
+  padding: 40px
+  font-size: 2em !important
+
+.panel-title
+  font-weight: bold
+
+.list-group
+  border: none !important
+  // position: relative !important
+  // z-index: 1 !important
+
+// TODO: Fix this (line between the title and elements of a recipe)
+.list-group:first-child:before
+  content: ""
+  position: absolute
+  left: 25%
+  // bottom: 0px
+  height: 1px
+  width: 50%
+  // border-top: 1px solid rgb(239, 242, 247) !important
+  // border-top: 1px solid black !important
+
+.panel
+  border: none
+  -webkit-box-shadow: 0px 0px 24px 0px rgba(50,50,50,.1)
+  -moz-box-shadow: 0px 0px 24px 0px rgba(50,50,50,.1)
+  box-shadow: 0px 0px 24px 0px rgba(50,50,50,.1)
+
+.list-group-item
+  // padding-left: 40px
+  padding: 0px 0px 20px 40px
+  border: none
+  color: $titleColor
+
+.buttonPaddings
+  padding: 10px 40px
+  text-transform: uppercase
+  font-size: .9em
+  font-weight: bold
+
+.btn-primary
+  background: $buttonBackground
+  border: none
+  @extend .buttonPaddings
+
+.btn-default
+  border: none
+  @extend .buttonPaddings
+
+.btn-danger
+  border: none
+  background: #f96e5c
+  @extend .buttonPaddings
+
+input
+  margin-bottom: 20px
+
+//mobile
+@media screen and (max-width: 600px)
+
+  .buttonPaddings
+    padding: 10px
+
+  .panel-title
+    text-align: center
+
+  .list-group-item
+    text-align: center
+    padding: 0px 0px 20px 0px
