--- a/sass/style.sass
+++ b/sass/style.sass
@@ -102,6 +102,11 @@ input
 
 input
   margin-bottom: 20px
+  border: none
+  border-bottom: 2px solid $buttonBackground
+  padding: 4px 0px
+  outline: none
+
 
 //mobile
 @media screen and (max-width: 600px)
