--- a/sass/style.sass
+++ b/sass/style.sass
@@ -111,6 +111,12 @@ input
 //mobile
 @media screen and (max-width: 600px)
 
+  .recipeList
+    width: 100%
+
+  .btn-primary
+    margin: 0 auto
+
   .buttonPaddings
     padding: 10px
 
