Button transitions and modal style.
Added a small (.2s) transition while hovering the buttons, set the
input field in bold and removed a useless border.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -106,7 +106,13 @@ input
   border-bottom: 2px solid $buttonBackground
   padding: 4px 0px
   outline: none
+  font-weight: bold
 
+button
+  transition: .2s ease
+
+.modal-footer
+  border-top: none
 
 //mobile
 @media screen and (max-width: 600px)
